[gd_scene load_steps=6 format=3 uid="uid://b6ks8iuocigav"]

[ext_resource type="Script" path="res://Scripts/UI/Titlebar/Set_paths_window.gd" id="1_uscpf"]
[ext_resource type="Texture2D" uid="uid://dwbicf3xmqxgd" path="res://Assets/starback.png" id="2_1o483"]
[ext_resource type="Theme" uid="uid://cd7ntvqe12ygn" path="res://Assets/Main.tres" id="3_pwdo3"]
[ext_resource type="Theme" uid="uid://cd3wy0ejn28l0" path="res://Assets/Popups.tres" id="4_jtps0"]

[sub_resource type="Theme" id="Theme_x2ok3"]

[node name="SetPaths" type="Window"]
title = "Set Asset Paths"
initial_position = 1
size = Vector2i(800, 500)
script = ExtResource("1_uscpf")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_x2ok3")

[node name="TextureRect" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_1o483")
stretch_mode = 1

[node name="CenterContainer" type="CenterContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="Control/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Buttons" type="VBoxContainer" parent="Control/CenterContainer/VBoxContainer/HBoxContainer/CenterContainer"]
layout_mode = 2
theme = ExtResource("3_pwdo3")

[node name="Add" type="Button" parent="Control/CenterContainer/VBoxContainer/HBoxContainer/CenterContainer/Buttons"]
layout_mode = 2
text = "Add Folder..."

[node name="AddDirs" type="FileDialog" parent="Control/CenterContainer/VBoxContainer/HBoxContainer/CenterContainer/Buttons/Add"]
title = "Open a Directory"
initial_position = 2
ok_button_text = "Select Current Folder"
dialog_hide_on_ok = true
file_mode = 2
access = 2
use_native_dialog = true

[node name="MarginContainer" type="MarginContainer" parent="Control/CenterContainer/VBoxContainer/HBoxContainer/CenterContainer/Buttons"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="Remove" type="Button" parent="Control/CenterContainer/VBoxContainer/HBoxContainer/CenterContainer/Buttons"]
layout_mode = 2
text = "Remove Folder"

[node name="MarginContainer" type="MarginContainer" parent="Control/CenterContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="DirList" type="Tree" parent="Control/CenterContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(400, 300)
layout_mode = 2
hide_folding = true
hide_root = true
select_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="Label" type="Label" parent="Control/CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_jtps0")
text = "Add directories of HAT mod \"Asset\" folders,
or to a decompiled FEZ .pak file."
horizontal_alignment = 1

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/HBoxContainer/CenterContainer/Buttons/Add" to="." method="_on_add_pressed"]
[connection signal="dir_selected" from="Control/CenterContainer/VBoxContainer/HBoxContainer/CenterContainer/Buttons/Add/AddDirs" to="." method="_on_add_dirs_dir_selected"]
[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/HBoxContainer/CenterContainer/Buttons/Remove" to="." method="_on_remove_pressed"]
